--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,27 @@
-<html>
-  <body>
-    <div id="message">Open your gift! (press up, up, down, down, left, right, left, right, b, a, b, a.)
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Happy Birthday Sean!</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+
+</head>
+<body>
+
+    <div id="desktoponly" class="container hide">Desktop only!</div>
+    <div id="message" class="container">Use your cheat code to open your gift!
     </div>
 
-    <div id="gift">
+    <div id="gift" class="container">
       <div id="box">
         <div class="stripe"></div>
       </div>
       <div id="bow"></div>
     </div>
     
-    <div id="cake" class="hide">
+    <div id="cake" class="container hide">
       <div id="bottom">
         <div class="icing"></div>
       </div>
@@ -21,5 +32,8 @@
       <div id="candle"></div>
       <div id="flame"></div>
     </div>
-  </body>
+
+  <script  src="./script.js"></script>
+
+</body>
 </html>
