prevent mobile scaling

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Description" content="Sean suuuucks, but less so than most people">
   <title>Happy Birthday Sean!</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
