added an extra candle

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div id="desktoponly" class="container hide">Desktop only!</div>
+    <div id="desktoponly" class="container hide">Desktop only, doofus!</div>
     <div id="message" class="container">Use your cheat code to open your gift!
     </div>
 
